[package]
name = "ki18n"
description = "A crate to use KF5I18n from rust."
author = ["Ayush Singh <ayushdevel1325@gmail.com>"]
version = "1.0.7"
edition = "2021"
links = "KF5I18n"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Ayush1325/ki18n-rs"
keywords = ["KDE", "kde", "localization"]
categories = ["api-bindings", "external-ffi-bindings", "localization"]
build = "build.rs"

[dependencies]
cpp = "0.5"
qmetaobject = { version = "0.2", optional = true }
qttypes = "0.2"
# qmetaobject = { path="../qmetaobject-rs/qmetaobject" }
# qttypes = { path="../qmetaobject-rs/qttypes" }

[build-dependencies]
cpp_build = "0.5"
semver = "1.0"

[dev-dependencies]
lazy_static = "1.4"

[package.metadata.docs.rs]
dependencies = ["qtbase5-dev", "qtdeclarative5-dev", "libkf5i18n-dev"]
all-features = true

[features]
all = ["qmetaobject"]
